# ai-eeg-learning-platform

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  env.example  pyproject.toml  test_research_features.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: ci.yml
backend/: __init__.py  main.py  mypy.ini  requirements.txt
backend/api/: __init__.py  routes.py
backend/api/v1/: __init__.py
backend/api/v1/endpoints/: __init__.py  analytics.py  eeg.py  learning.py  recommendations.py  system.py  users.py
backend/database/: __init__.py  connection.py  models.py
backend/eeg_processing/: __init__.py  manager.py  processor.py
backend/services/: auth_service.py  cache_service.py  dynamic_difficulty_service.py  recommendation_service.py
backend/tests/: test_eeg_processor.py
backend/utils/: config.py  logging_config.py
docker/: backend.Dockerfile  frontend.Dockerfile  init-db.sql  nginx.conf
frontend/web/: package-lock.json  package.json
frontend/web/public/: index.html
frontend/web/src/: App.js  index.css  index.js
frontend/web/src/components/: Header.js
frontend/web/src/pages/: Analytics.js  Dashboard.js  EEGMonitor.js  Learning.js  NotFound.js  Profile.js
frontend/web/src/store/: index.js
frontend/web/src/store/slices/: analyticsSlice.js  eegSlice.js  learningSlice.js  userSlice.js
ml_models/knowledge_tracing/: cnn_lstm_model.py
scripts/: push.ps1  push.sh
tests/: test_eeg_processor.py
